add responsive main with lover section for mobiile and desktop

--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
 
             <div class="lover-img">
                 <img class="img2" src="assets/flower-store.png" alt="">
-                <img class="w-[286px] h-[286px] img1" src="assets/trusted-badge.png" alt="">
+                <!-- <img class="w-[286px] h-[286px] img1" src="assets/trusted-badge.png" alt=""> -->
                 
             </div>
             <div class="lover-content">
-                <h2 class="lover-title noto-serif-bold">Flower & Plants Lover</h2>
+                <h2 class="lover-title noto-serif-bold">Flower & Plants<br>Lover</h2>
                 <ul class="lover-list inter-regular">
                     <li class="lover-item">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
                     <li class="lover-item">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
@@ -151,10 +151,12 @@
 
         </section>
 
-        <!-- <div class="cintainer">
-            <img class="img2" src="assets/flower-store.png"  alt="">
-        </div>
-        <img class="img1" src="assets/trusted-badge.png" alt=""> -->
+        <section class="deal-section mx-auto">
+            <div class="deal-content">
+                <h2 class="deal-title noto-serif-bold text-[50px]"><span>Latest</span>  Deals</h2>
+                <p class="deal-subtitle inter-regular text-[22px] text-[#8987A1] ">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+        </section>
 
     </main>
 
