add responsive main with off section for mobile and desktop using tailwind

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Market</title>
-    <link rel="stylesheet" href="styles/style.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -177,25 +177,25 @@
             </div>
         </section>
 
-        <section>
+        <section class="off-section">
 
-            <div>
+            <div class="off-content">
                 <div>
-                    <div>
-                        <h3></h3>
-                        <a href=""></a>
+                    <div class="bloom-plant bg-cover">
+                        <h3 class="off-title noto-serif-bold text-[20px] text-[#FFFFFF]">60% Off | Bloom Plant</h3>
+                        <a class="inter-semi-bold text-[16px] text-[#FFFFFF] underline" href="">Shop Now</a>
                     </div>
 
-                    <div>
-                        <h3></h3>
-                        <a href=""></a>
+                    <div class="ana-plant bg-cover">
+                        <h3 class="off-title noto-serif-bold text-[20px] text-[#FFFFFF]">30% Off | Ana  Plant</h3>
+                        <a class="inter-semi-bold text-[16px] text-[#FFFFFF] underline" href="">Shop Now</a>
                     </div>
 
                 </div>
 
-                <div>
-                    <h3></h3>
-                    <a href=""></a>
+                <div class="zabo-plant bg-cover">
+                    <h3 class="off-title noto-serif-bold text-[40px] text-[#FFFFFF]">25% Off | Zabo Plant</h3>
+                    <a class="inter-semi-bold text-[28px] text-[#FFFFFF] underline" href="">Shop Now</a>
                 </div>
             </div>
 
