add responsive main with join section for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -201,6 +201,16 @@
 
         </section>
 
+        <section class="join-section bg-cover">
+            <div class="join-content">
+                <h2 class="join-heading noto-serif-bold text-[50px] text-[#FFFFFF]">Join the colorful Bunch</h2>
+                <div class="flex">
+                    <input class="inter-regular text-[16px]" type="email" placeholder="Write email">
+                <button class="join-btn inter-semi-bold text-[16px] card-btn">Subscribe</button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
