--- a/index.html
+++ b/index.html
@@ -215,6 +215,39 @@
 
     <footer>
 
+        <div class="footer-content">
+
+            <div class="footer-logo">
+                <img class="w-[135px] h-[82px]" src="/assets/logo.png" alt="">
+                <p class="footer-description inter-regular text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+            </div>
+            <div>
+                <ul>
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Blog</li>
+                    <li>FAQ</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div>
+                 <ul>
+                    <li>Features</li>
+                    <li>Pricing</li>
+                    <li>Privacy Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Help Center</li>
+                </ul>
+            </div>
+            <div class="social-site">
+                <img src="/assets/icon-linkedin.png" alt="">
+                <img src="/assets/icon-twitter.png" alt="">
+                <img src="/assets/icon-facebook.png" alt="">
+                <img src="/assets/icon-youtube.png" alt="">
+            </div>
+
+        </div>
+
     </footer>
 
 </body>
