--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
             <div class="banner-content">
                 <div class="banner-text">
-                    <h1 class="banner-heading noto-serif-bold">ALWAYS <span>FRESH</span><br><span>FLOWERS</span></h1>
+                    <h1 class="banner-heading noto-serif-bold">ALWAYS <span>FRESH</span><br class="break-line">
+                        <span>FLOWERS</span></h1>
                     <p class="banner-description inter-regular">Indulge your senses with the beauty and fragrance of our
                         fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers
                         that <br> are perfect for any occasion. </p>
@@ -67,7 +68,7 @@
             <div class="plants-content">
                 <h2 class="noto-serif-bold plants-heading"><Span>Our</Span> Plants</h2>
                 <p class="inter-regular plants-description">Indulge your senses with the beauty and fragrance of our
-                    fresh flower shop. From<br>classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                    fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
 
             <div class="card-div">
@@ -146,8 +147,8 @@
         <section class="lover-container">
 
             <div class="lover-img">
-                <img class="img2" src="assets/flower-store.png" alt="">
-                <!-- <img class="w-[286px] h-[286px] img1" src="assets/trusted-badge.png" alt=""> -->
+                <img class="trusted-badge" src="assets/trusted-badge.png" alt="">
+                <img class="flower-store" src="assets/flower-store.png" alt="">
 
             </div>
             <div class="lover-content">
@@ -171,9 +172,8 @@
             <div class="deal-content">
                 <h2 class="deal-title noto-serif-bold text-[50px] "><span>Latest</span> Deals</h2>
                 <p class="deal-subtitle inter-regular text-[22px] text-[#8987A1]">Indulge your senses with the beauty
-                    and fragrance of<br class="break-line"> our fresh flower shop. From<br> classic<br
-                        class="break-line"> roses to exotic blooms, we offer a wide variety of<br class="break-line">
-                    fresh.</p>
+                    and fragrance of our
+                    fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
         </section>
 
@@ -182,18 +182,21 @@
             <div class="off-content">
                 <div>
                     <div class="bloom-plant bg-cover">
+                        <div class="overlay"></div>
                         <h3 class="off-title noto-serif-bold text-[20px] text-[#FFFFFF]">60% Off | Bloom Plant</h3>
                         <a class="inter-semi-bold text-[16px] text-[#FFFFFF] underline" href="">Shop Now</a>
                     </div>
 
                     <div class="ana-plant bg-cover">
-                        <h3 class="off-title noto-serif-bold text-[20px] text-[#FFFFFF]">30% Off | Ana  Plant</h3>
+                        <div class="overlay"></div>
+                        <h3 class="off-title noto-serif-bold text-[20px] text-[#FFFFFF]">30% Off | Ana Plant</h3>
                         <a class="inter-semi-bold text-[16px] text-[#FFFFFF] underline" href="">Shop Now</a>
                     </div>
 
                 </div>
 
                 <div class="zabo-plant bg-cover">
+                    <div class="overlay"></div>
                     <h3 class="off-title noto-serif-bold text-[40px] text-[#FFFFFF]">25% Off | Zabo Plant</h3>
                     <a class="inter-semi-bold text-[28px] text-[#FFFFFF] underline" href="">Shop Now</a>
                 </div>
@@ -206,7 +209,7 @@
                 <h2 class="join-heading noto-serif-bold text-[50px] text-[#FFFFFF]">Join the colorful Bunch</h2>
                 <div class="flex">
                     <input class="inter-regular text-[16px]" type="email" placeholder="Write email">
-                <button class="join-btn inter-semi-bold text-[16px] card-btn">Subscribe</button>
+                    <button class="join-btn inter-semi-bold text-[16px] card-btn">Subscribe</button>
                 </div>
             </div>
         </section>
@@ -219,7 +222,8 @@
 
             <div class="footer-logo">
                 <img class="w-[135px] h-[82px]" src="/assets/logo.png" alt="">
-                <p class="footer-description inter-regular text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+                <p class="footer-description inter-regular text-[22px]">Indulge your senses with the beauty and <br
+                        class="break-line">fragrance of our fresh flower shop.</p>
             </div>
             <div>
                 <ul>
@@ -231,7 +235,7 @@
                 </ul>
             </div>
             <div>
-                 <ul>
+                <ul>
                     <li>Features</li>
                     <li>Pricing</li>
                     <li>Privacy Policy</li>
