added the optional part this is alert msg and update some bugs

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
                 <div class="card">
                     <img class="card-img" src="assets/sample-flower-image.png" alt="">
@@ -87,7 +87,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
                 <div class="card">
                     <img class="card-img" src="assets/sample-flower-image.png" alt="">
@@ -95,7 +95,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
                 <div class="card">
                     <img class="card-img" src="assets/sample-flower-image.png" alt="">
@@ -103,7 +103,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
                 <div class="card">
                     <img class="card-img" src="assets/sample-flower-image.png" alt="">
@@ -111,7 +111,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
                 <div class="card">
                     <img class="card-img" src="assets/sample-flower-image.png" alt="">
@@ -119,7 +119,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
                 <div class="card">
                     <img class="card-img" src="assets/sample-flower-image.png" alt="">
@@ -127,7 +127,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
                 <div class="card">
                     <img class="card-img" src="assets/sample-flower-image.png" alt="">
@@ -135,7 +135,7 @@
                         <h4 class="inter-medium card-title">Lily Blossom</h4>
                         <h4 class="inter-bold card-prize">20 USD</h4>
                     </div>
-                    <button class="inter-semi-bold card-btn">ADD TO CART</button>
+                    <button onclick="showAlert()" class="inter-semi-bold card-btn">ADD TO CART</button>
                 </div>
 
             </div>
@@ -255,5 +255,13 @@
     </footer>
 
 </body>
+
+<script>
+    
+    function showAlert() {
+        alert("Flower Added to Cart");
+    }
+    
+</script>
 
 </html>
