img problem solved

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         <div class="footer-content">
 
             <div class="footer-logo">
-                <img class="w-[135px] h-[82px]" src="/assets/logo.png" alt="">
+                <img class="w-[135px] h-[82px]" src="assets/logo.png" alt="">
                 <p class="footer-description inter-regular text-[22px]">Indulge your senses with the beauty and <br
                         class="break-line">fragrance of our fresh flower shop.</p>
             </div>
@@ -244,10 +244,10 @@
                 </ul>
             </div>
             <div class="social-site">
-                <img src="/assets/icon-linkedin.png" alt="">
-                <img src="/assets/icon-twitter.png" alt="">
-                <img src="/assets/icon-facebook.png" alt="">
-                <img src="/assets/icon-youtube.png" alt="">
+                <img src="assets/icon-linkedin.png" alt="">
+                <img src="assets/icon-twitter.png" alt="">
+                <img src="assets/icon-facebook.png" alt="">
+                <img src="assets/icon-youtube.png" alt="">
             </div>
 
         </div>
